--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="assets/vendors/nouislider/nouislider.pips.css" />
     <link rel="stylesheet" href="assets/vendors/odometer/odometer.min.css" />
     <link rel="stylesheet" href="assets/vendors/swiper/swiper.min.css" />
-    <link rel="stylesheet" href="assets/vendors/notech-icons/style.css">
+    <link rel="stylesheet" href="assets/vendors/topcodx-icons/style.css?version=1.0.0">
     <link rel="stylesheet" href="assets/vendors/tiny-slider/tiny-slider.min.css" />
     <link rel="stylesheet" href="assets/vendors/reey-font/stylesheet.css" />
     <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.carousel.min.css" />
@@ -44,12 +44,12 @@
     <link rel="stylesheet" href="assets/vendors/timepicker/timePicker.css" />
 
     <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/notech.css" />
-    <link rel="stylesheet" href="assets/css/notech-responsive.css" />
+    <link rel="stylesheet" href="assets/css/topcodx.css?version=1.0.0" />
+    <link rel="stylesheet" href="assets/css/topcodx-responsive.css?version=1.0.0" />
 
 
     <!-- modes css -->
-    <link rel="stylesheet" id="jssMode" href="assets/css/notech-light.css">
+    <link rel="stylesheet" id="jssMode" href="assets/css/topcodx-light.css?version=1.0.0">
 
 
     <!-- toolbar css -->
@@ -790,7 +790,7 @@
                         <div class="testimonial-one__single">
                             <div class="testimonial-one__top-content">
                                 <div class="testimonial-one__img">
-                                    <img src="assets/images/testimonial/testimonial-1-3.jpg" alt="">
+                                    <img src="assets/images/testimonial/user.jpg" alt="">
                                 </div>
                                 <div class="testimonial-one__content">
                                     <p class="testimonial-one__text">Team was responsive, diligent, quick, communicative and meticulous. I would recommend Team to anyone looking for great teamwork! Will look to hire Ravi again in the near future.</p>
@@ -809,7 +809,7 @@
                         <div class="testimonial-one__single">
                             <div class="testimonial-one__top-content">
                                 <div class="testimonial-one__img">
-                                    <img src="assets/images/testimonial/testimonial-1-1.jpg" alt="">
+                                    <img src="assets/images/testimonial/user.jpg" alt="">
                                 </div>
                                 <div class="testimonial-one__content">
                                     <p class="testimonial-one__text">
@@ -829,7 +829,7 @@
                         <div class="testimonial-one__single">
                             <div class="testimonial-one__top-content">
                                 <div class="testimonial-one__img">
-                                    <img src="assets/images/testimonial/testimonial-1-2.jpg" alt="">
+                                    <img src="assets/images/testimonial/user.jpg" alt="">
                                 </div>
                                 <div class="testimonial-one__content">
                                     <p class="testimonial-one__text">Great working with team, has everything in the bucket that any client will need</p>
@@ -848,7 +848,7 @@
                         <div class="testimonial-one__single">
                             <div class="testimonial-one__top-content">
                                 <div class="testimonial-one__img">
-                                    <img src="assets/images/testimonial/testimonial-1-3.jpg" alt="">
+                                    <img src="assets/images/testimonial/user.jpg" alt="">
                                 </div>
                                 <div class="testimonial-one__content">
                                     <p class="testimonial-one__text">Very Excellent in understanding client needs, Has a good knowledge to get the work done .
@@ -870,7 +870,7 @@
                         <div class="testimonial-one__single">
                             <div class="testimonial-one__top-content">
                                 <div class="testimonial-one__img">
-                                    <img src="assets/images/testimonial/testimonial-1-3.jpg" alt="">
+                                    <img src="assets/images/testimonial/user.jpg" alt="">
                                 </div>
                                 <div class="testimonial-one__content">
                                     <p class="testimonial-one__text">
@@ -1152,7 +1152,7 @@
         <ul class="mobile-nav__contact list-unstyled">
             <li>
                 <i class="fa fa-envelope"></i>
-                <a href="mailto:needhelp@packageName__.com">needhelp@notech.com</a>
+                <a href="mailto:needhelp@packageName__.com">needhelp@topcodx.com</a>
             </li>
             <li>
                 <i class="fa fa-phone-alt"></i>
@@ -1221,7 +1221,7 @@
 
 
 <!-- template js -->
-<script src="assets/js/notech.js"></script>
+<script src="assets/js/topcodx.js"></script>
 
 
 <!-- toolbar js -->
